set z-index to intmax and intmin JUST TO MAKE SURE

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     overflow-y: hidden;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: -2147483647;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI";
 }
 
@@ -19,7 +19,7 @@ html {
 
 .overlay-container {
     position: absolute;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     left: 0;
@@ -27,7 +27,7 @@ html {
     bottom: 0;
     white-space: wrap;
     text-align: center;
-    z-index: 25;
+    z-index: 2147483647;
     background-color: rgba(0, 0, 0, 0);
     color: rgb(216, 216, 14);
     animation: moveUp 45s linear forwards;
